# static_library

./: README.md
mathematics/: CMakeLists.txt
mathematics/include/: mathematics.h
mathematics/src/: mathematics.cpp
power/: CMakeLists.txt
power/include/: power.h
power/src/: power.cpp
use_mathematics/: CMakeLists.txt  main.cpp
use_power/: CMakeLists.txt  main.cpp
